--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,140 @@
-blinker==1.8.2
-click==8.1.7
-Flask==3.0.3
-itsdangerous==2.2.0
-Jinja2==3.1.4
+argcomplete==3.1.4
+attrs==23.2.0
+Babel==2.10.3
+bcc==0.29.1
+bcrypt==3.2.2
+blinker==1.7.0
+bloom==0.12.0
+breezy==3.3.5
+Brlapi==0.8.5
+Brotli==1.1.0
+catkin-pkg==1.0.0
+catkin-pkg-modules==1.0.0
+certifi==2023.11.17
+chardet==5.2.0
+click==8.1.6
+cloud-init==24.1.3
+colcon-argcomplete==0.3.3
+colcon-bash==0.5.0
+colcon-cd==0.2.1
+colcon-cmake==0.2.28
+colcon-common-extensions==0.3.0
+colcon-core==0.17.0
+colcon-defaults==0.2.8
+colcon-devtools==0.3.0
+colcon-installed-package-information==0.2.1
+colcon-library-path==0.2.1
+colcon-metadata==0.2.5
+colcon-mixin==0.2.3
+colcon-notification==0.3.0
+colcon-output==0.2.13
+colcon-override-check==0.0.1
+colcon-package-information==0.4.0
+colcon-package-selection==0.2.10
+colcon-parallel-executor==0.3.0
+colcon-pkg-config==0.1.0
+colcon-powershell==0.4.0
+colcon-python-setup-py==0.2.8
+colcon-recursive-crawl==0.2.3
+colcon-ros==0.5.0
+colcon-test-result==0.3.8
+colcon-zsh==0.5.0
+colorama==0.4.6
+command-not-found==0.3
+configobj==5.0.8
+coverage==7.4.4
+cryptography==41.0.7
+cupshelpers==1.0
+dbus-python==1.3.2
+defer==1.0.6
+Deprecated==1.2.14
+distlib==0.3.8
+distro==1.9.0
+distro-info==1.7+build1
+docutils==0.20.1
+dulwich==0.21.6
+duplicity==2.1.4
+empy==3.3.4
+fastbencode==0.2
+fasteners==0.18
+fastimport==0.9.14
+gpg==1.18.0
+httplib2==0.20.4
+idna==3.6
+importlib-metadata==4.12.0
+iniconfig==1.1.1
+Jinja2==3.1.2
+jsonpatch==1.32
+jsonpointer==2.0
+jsonschema==4.10.3
+language-selector==0.1
+launchpadlib==1.11.0
+lazr.restfulclient==0.14.6
+lazr.uri==1.0.6
+louis==3.29.0
+Mako==1.3.2.dev0
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
-Werkzeug==3.0.4
+mdurl==0.1.2
+mercurial==6.7.2
+merge3==0.0.8
+monotonic==1.6
+more-itertools==10.2.0
+netaddr==0.8.0
+netifaces==0.11.0
+notify2==0.3
+oauthlib==3.2.2
+olefile==0.46
+packaging==24.0
+paramiko==2.12.0
+patiencediff==0.2.13
+pexpect==4.9.0
+pillow==10.2.0
+pluggy==1.4.0
+ptyprocess==0.7.0
+pycairo==1.25.1
+pycodestyle==2.11.1
+pycups==2.0.1
+PyGithub==2.2.0
+Pygments==2.17.2
+PyGObject==3.48.2
+PyJWT==2.7.0
+PyNaCl==1.5.0
+pyparsing==3.1.1
+pyrsistent==0.20.0
+pyserial==3.5
+pytest==7.4.4
+pytest-cov==4.1.0
+python-apt==2.7.7+ubuntu3
+python-dateutil==2.8.2
+python-debian==0.1.49+ubuntu2
+pytz==2024.1
+pyxdg==0.28
+PyYAML==6.0.1
+requests==2.31.0
+rich==13.7.1
+roman==3.3
+rosdep==0.25.0
+rosdep-modules==0.25.0
+rosdistro==0.9.1
+rosdistro-modules==0.9.1
+rospkg-modules==1.5.1
+setuptools==68.1.2
+six==1.16.0
+systemd-python==235
+typing_extensions==4.10.0
+tzlocal==5.2
+ubuntu-drivers-common==0.0.0
+ubuntu-pro-client==8001
+ufw==0.36.2
+unattended-upgrades==0.1
+urllib3==2.0.7
+usb-creator==0.3.16
+vcstool==0.3.0
+vcstools==0.1.42
+wadllib==1.3.6
+wheel==0.42.0
+wrapt==1.15.0
+xdg==5
+xkit==0.0.0
+zipp==1.0.0
